(cherry picked from commit c9bcaba3591126a3630fd2aba652be4095a55864)
update entropydata handler based on c9bcaba3591126a3630fd2aba652be4095a55864 and handling older ed versions